--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>Sample Website</title>
-	</head>
-	<body>
-		<h1>Hello!</h1>
-	</body>
+  <head>
+    <title>Sample Website</title>
+    <meta charset="utf-8">
+  </head>
+  <body>
+    <p>Hello, world!</p>
+  </body>
 </html>
