--- a/tags.html
+++ b/tags.html
@@ -6,10 +6,10 @@
   </head>
   <body>
 
-    <div>
-      <a href="index.html">Home</a>
-      <a href="tags.html">Tags</a>
-      <a href="moby_dick.html">Moby Dick</a>
+    <div style="text-align: right;">
+      <a href="index.html" style="text-decoration: none; color: blue;">Home</a>
+      <a href="tags.html" style="margin: 0 0 0 10px; text-decoration: none; color: blue;">HTML Tags</a>
+      <a href="moby_dick.html" style="margin: 0 0 0 10px; text-decoration: none; color: blue;">Moby Dick</a>
     </div>
 
     <h1>Important HTML tags</h1>
@@ -30,6 +30,19 @@
       The tables below don't include all HTML tags, but they do list many of
       the most important ones.
     </p>
+
+    <h2>Document Tags</h2>
+
+    <table>
+      <tr>
+        <th>Tag</th>
+        <th>Name</th>
+        <th>Purpose</th>
+      </tr>
+      <tr>
+        <td>TODO: <code>html, head, body, title, meta</code></td>
+      </tr>
+    </table>
 
     <h2>Block Elements</h2>
 
