--- a/index.html
+++ b/index.html
@@ -3,21 +3,7 @@
   <head>
     <title>Learn Enough to Be Dangerous</title>
     <meta charset="utf-8">
-
-    <style>
-      .nav-menu {
-        text-align: right;
-      }
-
-      .nav-spacing {
-        margin-left: 10px;
-      }
-
-      .nav-links {
-        text-decoration: none; 
-        color: blue;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
   <body>
 
@@ -42,7 +28,7 @@
 
     <p>
       <a href="https://twitter.com/learnenough" target="_blank"
-      rel="noopener" style="text-decoration: none;">
+      rel="noopener" class="img-link">
         <img src="images/small_twitter_logo.png">
       </a>
       You should follow Learn Enough on Twitter
@@ -68,7 +54,7 @@
       Web is also full of inspiring quotes, perhaps none more so than this one:
     </p>
 
-    <blockquote style="padding: 2px 20px; background: lightgrey;">
+    <blockquote class="quote-block">
       <p>
         <em>Don't believe every quote you read on the Internet.</em>
         <br>
@@ -91,7 +77,7 @@
       <a href="https://www.learnenough.com/">learnenough.com</a>.
     </p>
 
-    <h2>Founders</h2>
+    <h2 id="founders">Founders</h2>
 
     <p>
       Learn Enough to Be Dangerous was founded in 2015 by Michael Hartl, Lee
