--- a/moby_dick.html
+++ b/moby_dick.html
@@ -3,16 +3,17 @@
   <head>
     <title>Moby Dick</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
   <body>
 
-    <div style="text-align: right;">
-      <a href="index.html" style="text-decoration: none; color: blue;">Home</a>
-      <a href="tags.html" style="margin: 0 0 0 10px; text-decoration: none; color: blue;">HTML Tags</a>
-      <a href="moby_dick.html" style="margin: 0 0 0 10px; text-decoration: none; color: blue;">Moby Dick</a>
+    <div id="main-nav" class="nav-menu">
+      <a href="index.html" class="nav-links">Home</a>
+      <a href="tags.html" class="nav-spacing nav-links">HTML Tags</a>
+      <a href="moby_dick.html" class="nav-spacing nav-links">Moby Dick</a>
     </div>
 
-    <header style="text-align: center; margin: 0 0 80px;">
+    <header class="hdr">
       <h1>A Softcover Book Report</h1>
       <h2>Moby-Dick (or, The Whale)</h2>
     </header>
